# GP_project

./: .env  .gitignore  README.md  docker-compose.yml
AI/: Dockerfile  docker-compose.yml  pyproject.toml
AI/src/: agent.py  crud.py  database.py  fastapi_app.py  memory.py  models.py  report_generator.py  report_server.json  router.py  title_generator.py
AI/test/: streamlit.py
Data Analysis/: QGIS를 위한 시군구코드 병합.ipynb  데이터 전처리v2.ipynb  알고리즘별 군집화 비교.ipynb  은행점포데이터 크롤링.ipynb
WEB/: Dockerfile  docker-compose.yaml  docker-compose.yml  pom.xml
WEB/src/main/java/com/example/demo/: DemoApplication.java
WEB/src/main/java/com/example/demo/config/: AuthGuardFilter.java  PasswordConfig.java  WebMvcConfig.java
WEB/src/main/java/com/example/demo/domain/: UserAccount.java  UserAccountRepository.java
WEB/src/main/java/com/example/demo/service/: AuthService.java
WEB/src/main/resources/: application.properties
WEB/src/main/resources/static/css/: aftercare.css  base.css  components.css  layout.css
WEB/src/main/resources/static/js/: aftercare.js  agent-dock.js  app.js  dashboard-map.js  demand-viz-demo.js  route-map.js
WEB/src/main/webapp/WEB-INF/views/common/: index.jsp  login.jsp
WEB/src/main/webapp/WEB-INF/views/consumer/: home.jsp
WEB/src/main/webapp/WEB-INF/views/includes/: agent-dock.jsp  head.jsp
WEB/src/main/webapp/WEB-INF/views/layout/: end-customer.jsp  end-staff.jsp  start-customer.jsp  start-staff.jsp
WEB/src/main/webapp/WEB-INF/views/staff/: aftercare.jsp  alerts.jsp  home.jsp  routes.jsp
(+4 files in other folders)
